# Bachelorarbeit

./: .gitignore  README.md  distanceSensor.cpp  makefile
Arbeit/: Anforderungsanalyse.docx
PC/: CMakeLists.txt  DistanceThread.cpp  DistanceThread.h  Makefile  MessageListener.cpp  MessageListener.h  PC.pro  ProtocolLibrary.cpp  ProtocolLibrary.h  Robot  Robot.cpp  Robot.h  RobotGui  custommainwindow.cpp  custommainwindow.h  main.cpp  makefile  moc_DistanceThread.cpp  moc_custommainwindow.cpp
PC/Netzwerk/: CMakeLists.txt  Funktion_zum_Umwandeln.c  Netzwerk.c  Netzwerk.h  Netzwerk.out  NetzwerkClient.c  NetzwerkClient.h  NetzwerkClient.out  ProzessPi.c  ProzessPi.h  ProzessPiClient.c  ProzessPiClient.h  main.c  main.out  makefile
RPi/: Camera.cpp  Camera.h  ExampleHandler.cpp  ExampleHandler.h  GPIOLibrary.cpp  GPIOLibrary.h  I2CLibrary.cpp  I2CLibrary.h  MessageWriter.cpp  MessageWriter.h  ProtocolLibrary.cpp  ProtocolLibrary.h  ProzessPi.c  ProzessPi.h  RobotHandler.cpp  RobotHandler.h  RobotHandler.hpp  Server  UARTLibrary.cpp  UARTLibrary.h  main.c  main.cpp  makefile  server  server.cpp
RPi/Netzwerk/: Funktion_zum_Umwandeln.c  Netzwerk.c  Netzwerk.h  Netzwerk.out  ProzessPi.c  ProzessPi.h  main.c  main.out  makefile
Skripte/: Autostart.py  RPi_Wlan_switch.py
Test/: Robot  Robot.cpp  main.cpp  makefile
Test/Netzwerk/: Netzwerk.c  main.c  main.out  makefile
recovery/: CMakeLists.txt  CMakeLists_withmakefile_notworking.txt  Netzwerk.c  Netzwerk.h  makefile
