#SET(GCC_COVERAGE_LINK_FLAGS  "-lpthread")
#SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
find_package (Threads)
add_library(Netzwerk ProzessPiClient.c ProzessPiClient.h Funktion_zum_Umwandeln.c NetzwerkClient.c NetzwerkClient.h)
target_link_libraries (Netzwerk ${CMAKE_THREAD_LIBS_INIT})
